Started to add reproducible research presentation

--- a/documents/benefits_of_data_simulation.tex
+++ b/documents/benefits_of_data_simulation.tex
@@ -356,7 +356,7 @@
 	\frametitle{Lotka-Volterra inference problem: conclusions}
 	
 	\begin{equation}
-	\text{sparse measurement} + \text{noise} \implies \sim \text{unidentified}
+	\text{sparse measurement} + \text{noise} \implies \sim \text{poorly identified}
 	\end{equation}
 	
 	With the data to hand, it will be hard to estimate parameters with uncertainty. Solutions:
