--- a/problem_notebooks/identifiability.ipynb
+++ b/problem_notebooks/identifiability.ipynb
@@ -16,16 +16,16 @@
     "The differential equation:\n",
     "\n",
     "\\begin{equation}\n",
-    "\\frac{dy}{dt} = \\alpha (1 - \\left(\\frac{y}{\\kappa}\\right)^\\nu)y,\n",
+    "\\frac{dy}{dt} = \\alpha y(1 - \\left(\\frac{y}{\\kappa}\\right)^\\nu),\n",
     "\\end{equation}\n",
     "\n",
-    "where $y(0) = y_0$ is the initial condition. This system has a solution of the form:\n",
+    "has $y(0) = y_0$ as the initial condition. This system has a solution of the form:\n",
     "\n",
     "\\begin{equation}\n",
     "y(t) = \\frac{\\kappa}{\\left(1 + \\left(\\left(\\frac{\\kappa}{y_0}\\right)^\\nu - 1\\right)\\exp(-\\alpha \\nu t)\\right)^{1/\\nu}},\n",
     "\\end{equation}\n",
     "\n",
-    "which results in a modified logistic-type cuve that can be used to model tumour growth."
+    "which results in a modified logistic-type curve that can be used to model tumour growth."
    ]
   },
   {
