--- a/problem_notebooks/answers/identifiability.ipynb
+++ b/problem_notebooks/answers/identifiability.ipynb
@@ -25,7 +25,7 @@
     "y(t) = \\frac{\\kappa}{\\left(1 + \\left(\\left(\\frac{\\kappa}{y_0}\\right)^\\nu - 1\\right)\\exp(-\\alpha \\nu t)\\right)^{1/\\nu}},\n",
     "\\end{equation}\n",
     "\n",
-    "which results in a modified logistic-type cuve that can be used to model tumour growth."
+    "which results in a modified logistic-type curve that can be used to model tumour growth."
    ]
   },
   {
@@ -216,7 +216,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mesh = np.array(np.meshgrid(alpha, nu))\n",
