--- a/problem_notebooks/answers/experimental_design.ipynb
+++ b/problem_notebooks/answers/experimental_design.ipynb
@@ -233,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using Scipy's `minimize` function, write a function that calculates root-mean-square distance (rmse) between your observations and model solutions across all time points.\n",
+    "Write a function that calculates root-mean-square distance (rmse) between your observations and model solutions across all time points.\n",
     "\n",
     "That is, we suppose there are errors:\n",
     "\n",
